feat: add tariff plan and group API
